objects/Mechanical_Service_Sheet__c/Mechanical_Service_Sheet__c.object-meta.xml
<CustomObject>
    <description>This object contains two Inspection Certificates:-

Suppression System Mechanical Inspection Certificate
Riser &amp; Hydrant Inspection Certificate</description>
    <label>Mechanical Service Sheet</label>
    <nameField>
        <displayFormat>SSM{00000}</displayFormat>
        <label>Mechanical Service Sheets</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mechanical Service Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>