objects/Mechanical_Service_Sheet__c/fields/Additional_Technician__c.field-meta.xml
<CustomField>
    <fullName>Additional_Technician__c</fullName>
    <formula>IF( NOT( ISBLANK( Visit__c ) ), 
HYPERLINK(&apos;/&apos;&amp;Visit__r.X2nd_Technician__r.Id ,Visit__r.X2nd_Technician__r.Name ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Technician</label>
    <type>Text</type>
</CustomField>