objects/Mechanical_Service_Sheet__c/fields/Agent_Fill__c.field-meta.xml
<CustomField>
    <fullName>Agent_Fill__c</fullName>
    <label>Agent Fill</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>