objects/Mechanical_Service_Sheet__c/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Agent Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>