objects/Mechanical_Service_Sheet__c/fields/Agent_Volume__c.field-meta.xml
<CustomField>
    <fullName>Agent_Volume__c</fullName>
    <label>Agent Volume (m3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>