objects/Mechanical_Service_Sheet__c/fields/Agent_Weight__c.field-meta.xml
<CustomField>
    <fullName>Agent_Weight__c</fullName>
    <label>Agent Weight (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>