objects/Mechanical_Service_Sheet__c/fields/ALUnit_New_Equipment_Left_On_Site__c.field-meta.xml
<CustomField>
    <fullName>ALUnit_New_Equipment_Left_On_Site__c</fullName>
    <label>New Equipment Left On-Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>