objects/Mechanical_Service_Sheet__c/fields/Brackets_Qty__c.field-meta.xml
<CustomField>
    <fullName>Brackets_Qty__c</fullName>
    <label>Brackets Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>