objects/Mechanical_Service_Sheet__c/fields/Cabinet1__c.field-meta.xml
<CustomField>
    <fullName>Cabinet1__c</fullName>
    <label>Cabinet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>