objects/Mechanical_Service_Sheet__c/fields/Cabinet__c.field-meta.xml
<CustomField>
    <fullName>Cabinet__c</fullName>
    <label>Cabinet</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>