objects/Mechanical_Service_Sheet__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>