objects/Mechanical_Service_Sheet__c/fields/Change_Over_Done__c.field-meta.xml
<CustomField>
    <fullName>Change_Over_Done__c</fullName>
    <label>Change Over Done</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Wet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>