objects/Mechanical_Service_Sheet__c/fields/Check_Values_Qty__c.field-meta.xml
<CustomField>
    <fullName>Check_Values_Qty__c</fullName>
    <label>Check Valves Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>