objects/Mechanical_Service_Sheet__c/fields/Checked__c.field-meta.xml
<CustomField>
    <fullName>Checked__c</fullName>
    <label>Checked</label>
    <type>Date</type>
</CustomField>