objects/Mechanical_Service_Sheet__c/fields/Checked_by_Service__c.field-meta.xml
<CustomField>
    <fullName>Checked_by_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked by Service</label>
    <type>Checkbox</type>
</CustomField>