objects/Mechanical_Service_Sheet__c/fields/Close_Visit__c.field-meta.xml
<CustomField>
    <fullName>Close_Visit__c</fullName>
    <inlineHelpText>The visit related to this service sheet will be closed &amp; a new visit will be created if you choose &quot;Yes&quot;. On some service visits, there may be more than one service sheet, which is why this is now an option. The visit will remain open if you select &quot;No&quot;</inlineHelpText>
    <label>Close Visit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>