objects/Mechanical_Service_Sheet__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>These comments will be sent out to the customer on the html email confirmation.</inlineHelpText>
    <label>Technician&apos;s Comments to customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>