objects/Mechanical_Service_Sheet__c/fields/Comments_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Sales__c</fullName>
    <inlineHelpText>PLease add any information that Sales could use in their quotation - for example, what are we quoting for.</inlineHelpText>
    <label>Comments to Sales</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>