objects/Mechanical_Service_Sheet__c/fields/Comments_to_service__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_service__c</fullName>
    <inlineHelpText>These comments are intended for Service and will not appear on any customer communication.</inlineHelpText>
    <label>Technician Comments to Office</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>