objects/Mechanical_Service_Sheet__c/fields/Current_Purchase_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Purchase_Order_No__c</fullName>
    <formula>IF ( Site__r.Current_Purchase_Order_No__c =&quot;&quot;, Site__r.Parent_Purchase_Order_No__c ,Site__r.Current_Purchase_Order_No__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Purchase Order number from the Parent or Site if there is one.</inlineHelpText>
    <label>PO No. from Site</label>
    <type>Text</type>
</CustomField>