objects/Mechanical_Service_Sheet__c/fields/Cylinders_Qty__c.field-meta.xml
<CustomField>
    <fullName>Cylinders_Qty__c</fullName>
    <label>Cylinders Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>