objects/Mechanical_Service_Sheet__c/fields/Document_Attached__c.field-meta.xml
<CustomField>
    <fullName>Document_Attached__c</fullName>
    <label>Document Attached</label>
    <length>255</length>
    <type>Text</type>
</CustomField>