objects/Mechanical_Service_Sheet__c/fields/Drain_Valve_Sign__c.field-meta.xml
<CustomField>
    <fullName>Drain_Valve_Sign__c</fullName>
    <label>Drain Valve Sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>