objects/Mechanical_Service_Sheet__c/fields/Dust_Cap_Fixing_Chain_Qty__c.field-meta.xml
<CustomField>
    <fullName>Dust_Cap_Fixing_Chain_Qty__c</fullName>
    <label>Dust Cap Fixing Chain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>