objects/Mechanical_Service_Sheet__c/fields/Ela_Pressurising__c.field-meta.xml
<CustomField>
    <fullName>Ela_Pressurising__c</fullName>
    <label>ELA Pressurising (m3/hr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>