objects/Mechanical_Service_Sheet__c/fields/Engineer__c.field-meta.xml
<CustomField>
    <fullName>Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Mechanical Service Sheets (Technician)</relationshipLabel>
    <relationshipName>Mechanical_Service_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>