objects/Mechanical_Service_Sheet__c/fields/Engineer_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_Email_Address__c</fullName>
    <inlineHelpText>Please note this will be populated once the Service Sheet is saved.</inlineHelpText>
    <label>Technician&apos;s Email Address</label>
    <type>Email</type>
</CustomField>