objects/Mechanical_Service_Sheet__c/fields/Engineer_s_Signature__c.field-meta.xml
<CustomField>
    <fullName>Engineer_s_Signature__c</fullName>
    <label>Technician&apos;s Signature</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>