objects/Mechanical_Service_Sheet__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <defaultValue>&quot;You cannot select a service sheet when you are on a callout. Please go back in the browser and select NEW REACTIVE SHEET on the visit. Thank you&quot;</defaultValue>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>