objects/Mechanical_Service_Sheet__c/fields/Extract_System_Manual__c.field-meta.xml
<CustomField>
    <fullName>Extract_System_Manual__c</fullName>
    <label>Extract System (Manual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>