objects/Mechanical_Service_Sheet__c/fields/Extract_System_Manual_Comments__c.field-meta.xml
<CustomField>
    <fullName>Extract_System_Manual_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>