objects/Mechanical_Service_Sheet__c/fields/F_E_Job_Time__c.field-meta.xml
<CustomField>
    <fullName>F_E_Job_Time__c</fullName>
    <label>Job Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>