objects/Mechanical_Service_Sheet__c/fields/Fail_System_Location1__c.field-meta.xml
<CustomField>
    <fullName>Fail_System_Location1__c</fullName>
    <label>Fail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>