objects/Mechanical_Service_Sheet__c/fields/Fail_System_Location__c.field-meta.xml
<CustomField>
    <fullName>Fail_System_Location__c</fullName>
    <label>Fail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>