objects/Mechanical_Service_Sheet__c/fields/Final_Pressure1__c.field-meta.xml
<CustomField>
    <fullName>Final_Pressure1__c</fullName>
    <label>Final Pressure (bar)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>