objects/Mechanical_Service_Sheet__c/fields/Final_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Final_Pressure__c</fullName>
    <label>Final Pressure (bar)</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>