objects/Mechanical_Service_Sheet__c/fields/Flow_Pressure_Switch__c.field-meta.xml
<CustomField>
    <fullName>Flow_Pressure_Switch__c</fullName>
    <label>Flow/Pressure Switch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>