objects/Mechanical_Service_Sheet__c/fields/Fusible_Links_Comments__c.field-meta.xml
<CustomField>
    <fullName>Fusible_Links_Comments__c</fullName>
    <label>Comments</label>
    <length>30</length>
    <type>Text</type>
</CustomField>