objects/Mechanical_Service_Sheet__c/fields/Fusible_Links_Qty__c.field-meta.xml
<CustomField>
    <fullName>Fusible_Links_Qty__c</fullName>
    <label>Fusible Links Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>