objects/Mechanical_Service_Sheet__c/fields/Gaseous_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Gaseous_Suppression__c</fullName>
    <label>Gaseous Suppression</label>
    <length>50</length>
    <type>Text</type>
</CustomField>