objects/Mechanical_Service_Sheet__c/fields/Gauge_Calibration__c.field-meta.xml
<CustomField>
    <fullName>Gauge_Calibration__c</fullName>
    <label>Gauge Calibration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>