objects/Mechanical_Service_Sheet__c/fields/Georgian_Wired_Glass_Qty__c.field-meta.xml
<CustomField>
    <fullName>Georgian_Wired_Glass_Qty__c</fullName>
    <label>Georgian Wired Glass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>