objects/Mechanical_Service_Sheet__c/fields/H_O_S__c.field-meta.xml
<CustomField>
    <fullName>H_O_S__c</fullName>
    <label>H.O.S</label>
    <length>18</length>
    <type>Text</type>
</CustomField>