objects/Mechanical_Service_Sheet__c/fields/Height_Above_Sea_Level__c.field-meta.xml
<CustomField>
    <fullName>Height_Above_Sea_Level__c</fullName>
    <label>Height Above Sea Level (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>