objects/Mechanical_Service_Sheet__c/fields/HYD_Air_Release_Valve_Std__c.field-meta.xml
<CustomField>
    <fullName>HYD_Air_Release_Valve_Std__c</fullName>
    <label>Air Release Valve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>