objects/Mechanical_Service_Sheet__c/fields/HYD_Dust_Cap_Fixing_Chain__c.field-meta.xml
<CustomField>
    <fullName>HYD_Dust_Cap_Fixing_Chain__c</fullName>
    <label>Dust Cap Fixing Chain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>