objects/Mechanical_Service_Sheet__c/fields/HYD_Georgian_Wired_Glass__c.field-meta.xml
<CustomField>
    <fullName>HYD_Georgian_Wired_Glass__c</fullName>
    <label>Georgian Wired Glass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>