objects/Mechanical_Service_Sheet__c/fields/HYD_Glazing_Seal_Channel__c.field-meta.xml
<CustomField>
    <fullName>HYD_Glazing_Seal_Channel__c</fullName>
    <label>Glazing Seal &amp; Channel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>