objects/Mechanical_Service_Sheet__c/fields/HYD_Outlet_Valve_Blank_Dust_Cap__c.field-meta.xml
<CustomField>
    <fullName>HYD_Outlet_Valve_Blank_Dust_Cap__c</fullName>
    <label>Outlet Valve Blank Dust Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>