objects/Mechanical_Service_Sheet__c/fields/HYD_Valve_Sealing_Units_64mm__c.field-meta.xml
<CustomField>
    <fullName>HYD_Valve_Sealing_Units_64mm__c</fullName>
    <label>Valve Sealing Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>