objects/Mechanical_Service_Sheet__c/fields/Inlet_Location1__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Location1__c</fullName>
    <label>Inlet Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>