objects/Mechanical_Service_Sheet__c/fields/Inlet_Location__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Location__c</fullName>
    <label>Inlet Location</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>