objects/Mechanical_Service_Sheet__c/fields/Interlink_Integrity_Fail__c.field-meta.xml
<CustomField>
    <fullName>Interlink_Integrity_Fail__c</fullName>
    <label>Fail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>