objects/Mechanical_Service_Sheet__c/fields/Last_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Test_Date__c</fullName>
    <label>Last Test Date</label>
    <type>Date</type>
</CustomField>