objects/Mechanical_Service_Sheet__c/fields/LC1_Leather_Strap_Qty__c.field-meta.xml
<CustomField>
    <fullName>LC1_Leather_Strap_Qty__c</fullName>
    <label>LCI Leather Strap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>