objects/Mechanical_Service_Sheet__c/fields/Link_Lines_Comments__c.field-meta.xml
<CustomField>
    <fullName>Link_Lines_Comments__c</fullName>
    <label>Comments</label>
    <length>30</length>
    <type>Text</type>
</CustomField>