objects/Mechanical_Service_Sheet__c/fields/Link_Lines_Pass__c.field-meta.xml
<CustomField>
    <fullName>Link_Lines_Pass__c</fullName>
    <label>Pass</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>