objects/Mechanical_Service_Sheet__c/fields/Link_Lines_Qty__c.field-meta.xml
<CustomField>
    <fullName>Link_Lines_Qty__c</fullName>
    <label>Link Lines Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>