objects/Mechanical_Service_Sheet__c/fields/Liquid_Level_Qty__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Level_Qty__c</fullName>
    <label>Liquid Level Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>