objects/Mechanical_Service_Sheet__c/fields/Log_Book_Signed__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Signed__c</fullName>
    <label>Log Book Signed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>