objects/Mechanical_Service_Sheet__c/fields/Logged__c.field-meta.xml
<CustomField>
    <fullName>Logged__c</fullName>
    <label>Logged</label>
    <type>Date</type>
</CustomField>