objects/Mechanical_Service_Sheet__c/fields/Lubrication_Grease__c.field-meta.xml
<CustomField>
    <fullName>Lubrication_Grease__c</fullName>
    <label>Lubrication/Grease</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>