objects/Mechanical_Service_Sheet__c/fields/Manual_Release_Point_Qty__c.field-meta.xml
<CustomField>
    <fullName>Manual_Release_Point_Qty__c</fullName>
    <label>Manual Release Point Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>