objects/Mechanical_Service_Sheet__c/fields/Max_Protected_Height__c.field-meta.xml
<CustomField>
    <fullName>Max_Protected_Height__c</fullName>
    <label>Max Protected Height (m)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>