objects/Mechanical_Service_Sheet__c/fields/Mixing_During_Retention__c.field-meta.xml
<CustomField>
    <fullName>Mixing_During_Retention__c</fullName>
    <label>Mixing During Retention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>