objects/Mechanical_Service_Sheet__c/fields/No_of_Cycles__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cycles__c</fullName>
    <label>No. of Cycles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>