objects/Mechanical_Service_Sheet__c/fields/Nozzles_Qty__c.field-meta.xml
<CustomField>
    <fullName>Nozzles_Qty__c</fullName>
    <label>Nozzles Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>