objects/Mechanical_Service_Sheet__c/fields/Number_of_Nozzles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Nozzles__c</fullName>
    <label>Number of Nozzles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>