objects/Mechanical_Service_Sheet__c/fields/Operator_Position__c.field-meta.xml
<CustomField>
    <fullName>Operator_Position__c</fullName>
    <label>Operator Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>