objects/Mechanical_Service_Sheet__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <label>Order No:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>