objects/Mechanical_Service_Sheet__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Spare Parts Other types</description>
    <inlineHelpText>You can enter any details of other spare parts used, which do not appear above.</inlineHelpText>
    <label>Other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>