objects/Mechanical_Service_Sheet__c/fields/Other_Qty__c.field-meta.xml
<CustomField>
    <fullName>Other_Qty__c</fullName>
    <description>Spare Parts Other Quantity</description>
    <label>Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>