objects/Mechanical_Service_Sheet__c/fields/Outlet_Location__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Location__c</fullName>
    <label>Outlet Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>