objects/Mechanical_Service_Sheet__c/fields/Outlet_Location_Long__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Location_Long__c</fullName>
    <label>Outlet Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>