objects/Mechanical_Service_Sheet__c/fields/Outlet_Sign_BS5499_Qty__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Sign_BS5499_Qty__c</fullName>
    <label>Outlet Sign BS5499</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>