objects/Mechanical_Service_Sheet__c/fields/Outlet_Valve_Blank_Dust_Cap_Qty__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Valve_Blank_Dust_Cap_Qty__c</fullName>
    <label>Outlet Valve Blank Dust Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>