objects/Mechanical_Service_Sheet__c/fields/Pass_System_Location1__c.field-meta.xml
<CustomField>
    <fullName>Pass_System_Location1__c</fullName>
    <label>Pass_System_Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>