objects/Mechanical_Service_Sheet__c/fields/Pass_System_Location__c.field-meta.xml
<CustomField>
    <fullName>Pass_System_Location__c</fullName>
    <label>Pass</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>