objects/Mechanical_Service_Sheet__c/fields/Pipework1__c.field-meta.xml
<CustomField>
    <fullName>Pipework1__c</fullName>
    <label>Pipework</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>